--- a/TODO
+++ b/TODO
@@ -1,14 +1,17 @@
-adjust weights
-clean up code (esp. select statements)
-
-document!
-
-ASK USER IF THEY'D LIKE TO ANSWER A FEW MORE QUESTIONS IF GUESS WAS WRONG?
-
-http://net.tutsplus.com/tutorials/javascript-ajax/submit-a-form-without-page-refresh-using-jquery/
-
-ADMIN PAGE LOGINS
-    http://dloewenherz.blogspot.com/2010/01/openid-clickpass-webpy-and-python.html
-    or do this the crappy way ourselves. or just don't worry for the project.
-
-guess once value is over 100?
+* adjust weights
+* clean up code (esp. select statements: sql alchemy? json? elasticsearch? postgresql?)
+* document!
+* ask user if they'd answer a few more questions if guess was wrong?
+* Protect admin page with nginx
+* Flask?
+* Add autocomplete when adding an article and select by (normalized) link or title and select hidden with ID
+* Rename "think about someone" to "find an article"
+* guess once value is over 100?
+* Make candidates and other results clickable
+* fix retrain page
+* add other databases
+* add weights when one keyword is related to another
+* more suggestions of "what were you thinking of"?
+* add title and content (ngrams? bags of words?) to probability guessing
+* can we do adversary learning?
+* improve design
